crates/kyzo-core/tests/compile_fail/write_tx_use_after_commit.stderr
error[E0382]: borrow of moved value: `tx`
  --> tests/compile_fail/write_tx_use_after_commit.rs:18:13
   |
16 | fn spent_after_commit<T: WriteTx>(mut tx: T) {
   |                                   ------ move occurs because `tx` has type `T`, which does not implement the `Copy` trait
17 |     let committed = tx.commit();
   |                -------- `tx` moved due to this method call
18 |     let put_after_commit = tx.put(b"k", b"v");
   |             ^^ value borrowed here after move
   |
note: `commit` takes ownership of the receiver `self`, which moves `tx`
  --> src/store/tx.rs
   |
   |     fn commit(self) -> std::result::Result<(), CommitFailure>
   |               ^^^^
help: consider further restricting type parameter `T` with trait `Copy`
   |
16 | fn spent_after_commit<T: WriteTx + Copy>(mut tx: T) {
   |                                  ++++++
